[package]
name = "anaf-api"
version = "0.1.0"
edition = "2021"
publish = false

[features]
vat_payer_async_api = []
balance_api = []
cults_api = []
farmers_api = []

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
serde_qs = "0.12.0"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.18"
