[package]
name = "anaf-api"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["vat_payer_async_api", "balance_api", "cults_api", "farmers_api"]
vat_payer_async_api = []
balance_api = []
cults_api = []
farmers_api = []

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
mockito = "1.2"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
